// Vitest Snapshot v1

exports[`Checkbox > should render 1`] = `
<styled.div>
  <Styled(CustomCheckboxContainer)
    aria-label="foo"
    checked={false}
    onClick={[MockFunction spy]}
  >
    <Icon
      checked={false}
      faStyle="fas"
      fixedWidth={false}
      name="check"
    />
    <Styled(CustomCheckboxInput) />
  </Styled(CustomCheckboxContainer)>
  <styled.span
    onClick={[MockFunction spy]}
  >
    foo
  </styled.span>
</styled.div>
`;

exports[`Checkbox > should render when [props.checked===true] 1`] = `
<styled.div>
  <Styled(CustomCheckboxContainer)
    aria-label="foo"
    checked={true}
    onClick={[MockFunction spy]}
  >
    <Icon
      checked={true}
      faStyle="fas"
      fixedWidth={false}
      name="check"
    />
    <Styled(CustomCheckboxInput) />
  </Styled(CustomCheckboxContainer)>
  <styled.span
    onClick={[MockFunction spy]}
  >
    foo
  </styled.span>
</styled.div>
`;

exports[`Checkbox > should render when [props.label===''] 1`] = `
<styled.div>
  <Styled(CustomCheckboxContainer)
    aria-label=""
    checked={false}
    onClick={[MockFunction spy]}
  >
    <Icon
      checked={false}
      faStyle="fas"
      fixedWidth={false}
      name="check"
    />
    <Styled(CustomCheckboxInput) />
  </Styled(CustomCheckboxContainer)>
</styled.div>
`;
